--- a/index.html
+++ b/index.html
@@ -4,8 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Title</title>
+    <script src="index.js"></script>
+    <title>PsyTech UX by Xenia Lechler</title>
     <link rel="stylesheet" href="screen.css">
+<!-- GOOGLE FONTS - Adds various fonts from Google Fonts -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Caveat">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins">
+    <!-- Install Tailwind -->
+<!-- Add play CDN script, enabling Tailwind utility classes to style content -->
+    <script src="https://cdn.tailwindcss.com"></script>
+<!-- Edit the tailwind.config object to customize config -->
+    <script> tailwind.config = {
+      theme: {
+        extend: {
+          colors: {
+            montserrat: '#DEEAFD',
+          }
+        }
+      }
+    }
+    </script>
+<!-- Enable first-party plugins using the 'plugins' query parameter -->
+    <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp"></script>
+<!-- Include Flowbite via CDN by requiring minified stylesheet -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.css" rel="stylesheet">
+  </head>
+  <body>
+<!-- Include Flowbite via CDN by requiring minified stylesheet -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.css" rel="stylesheet">
+    <script src="index.js"></script>
   </head>
   <body>
     <h1>Heading</h1>
