--- a/index.html
+++ b/index.html
@@ -37,5 +37,7 @@
   <body>
     <h1>Heading</h1>
     <script src="index.js"></script>
+<!-- INCLUDE FLOWBITE VIA CDN: Req. minified stylesheet inside body tag -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.js"></script>
   </body>
 </html>
