--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.css" rel="stylesheet">
   </head>
   <body>
-    <h1>Heading</h1>
+    <h1>PsyTech UX</h1>
+    <h2>Nu? NU NU NU</h2>
     <script src="index.js"></script>
 <!-- INCLUDE FLOWBITE VIA CDN: Req. minified stylesheet inside body tag -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.js"></script>
