--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script src="index.js"></script>
+    <script src="tailwind.config.js"></script>
+    <script src="package-lock.json"></script>
+    <script src="package.json"></script>
     <title>PsyTech UX by Xenia Lechler</title>
     <link rel="stylesheet" href="screen.css">
 <!-- GOOGLE FONTS - Adds various fonts from Google Fonts -->
@@ -32,6 +35,11 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.css" rel="stylesheet">
   </head>
   <body>
+    <header>
+      <div id="scroll-container">
+        <div id="scroll-text"></div>
+      </div>
+    </header>
     <h1>PsyTech UX</h1>
     <h2>Nu? NU NU NU</h2>
     <script src="index.js"></script>
