--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
       </h1>
       <div id="scroll-container">
         <div id="scroll-text">
-          <h3 style="font-style: italic;">
+          <h3 style="font-style: italic; font-weight: bolder;">
             ⸻USER EXPERIENCE⸻RESEARCH⸻USABILITY⸻DATA & ANALYTICS⸻PSYCHOLOGY⸻COGNITIVE & BEHAVIORAL ERGONOMICS⸻
           </h3>
         </div>
       </div>
     </header>
-    <ul>
+    <ul style="font-weight: bold;">
       <li>
         <a href="#home">Home</a>
       </li>
