--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
     <script src="tailwind.config.js"></script>
     <script src="package-lock.json"></script>
     <script src="package.json"></script>
-    <title>PsyTech UX by Xenia Lechler</title>
+    <title>PsyTech UX - About</title>
     <link rel="stylesheet" href="screen.css">
     <link rel="stylesheet" href="index.js">
 <!-- GOOGLE FONTS - Adds various fonts from Google Fonts -->
@@ -30,51 +30,27 @@
       <h1 style="background-color: e0ffff; font-size: 650%;">
         PsyTech UX
       </h1>
-      <div id="scroll-container">
-        <div id="scroll-text">
-          <h3 style="background-color: e0ffff; font-weight: bolder;">
-            User Experience⸻Research⸻Usability⸻Data & Analytics⸻Psychology⸻Cognitive & Behavioral Ergonomics
-          </h3>
-        </div>
-      </div>
-      <hr class="solid">
     </header>
-    <ul style="font-weight: bold; color: #424242;">
+    <ul style="font-weight: bold;">
       <li>
-        <a href="index.html" style="color: #000000;">Home</a>
+        <a href="index.html">Home</a>
       </li>
       <li>
-        <a href="about.html" style="color: #424242;">About</a>
+        <a href="about.html">About</a>
       </li>
       <li>
-        <a href="contact.html" style="color: #424242;">Contact</a>
+        <a href="contact.html">Contact</a>
       </li>
     </ul>
-    <section id="images">
-      <div class="gallery">
-        <a target="_blank" href="CATA.png">
-          <img src="CATA.png" width="600" height="400" class="btn">
-        </a>
-        <div class="desc">Add a description of the image here</div>
+    <div class="city">
+        <h2>London</h2>
+        <p>London is the capital of England.</p>
+      </div> 
+      <div class="city">
+        <h2>Paris</h2>
+        <p>Paris is the capital of France.</p>
       </div>
-      <div class="gallery">
-        <a target="_blank" href="IRB.jpg">
-          <img src="IRB.jpg" width="600" height="400">
-        </a>
-        <div class="desc">Add a description of the image here</div>
+      <div class="city">
+        <h2>Tokyo</h2>
+        <p>Tokyo is the capital of Japan.</p>
       </div>
-      <div class="gallery">
-        <a target="_blank" href="2022.jpg">
-          <img src="2022.jpg" width="600" height="400">
-        </a>
-        <div class="desc">Add a description of the image here</div>
-      </div>
-      <div class="gallery">
-        <a target="_blank" href="2021.jpg">
-          <img src="2021.jpg" width="600" height="400">
-        </a>
-        <div class="desc">Add a description of the image here</div>
-      </div>
-    </section>
-  </body>
-</html>
