--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
     <script src="tailwind.config.js"></script>
     <script src="package-lock.json"></script>
     <script src="package.json"></script>
-    <title>PsyTech UX by Xenia Lechler</title>
+    <title>PsyTech UX - Contact</title>
     <link rel="stylesheet" href="screen.css">
     <link rel="stylesheet" href="index.js">
 <!-- GOOGLE FONTS - Adds various fonts from Google Fonts -->
@@ -30,51 +30,48 @@
       <h1 style="background-color: e0ffff; font-size: 650%;">
         PsyTech UX
       </h1>
-      <div id="scroll-container">
-        <div id="scroll-text">
-          <h3 style="background-color: e0ffff; font-weight: bolder;">
-            User Experience⸻Research⸻Usability⸻Data & Analytics⸻Psychology⸻Cognitive & Behavioral Ergonomics
-          </h3>
-        </div>
-      </div>
-      <hr class="solid">
     </header>
-    <ul style="font-weight: bold; color: #424242;">
+    <ul style="font-weight: bold;">
       <li>
-        <a href="index.html" style="color: #000000;">Home</a>
+        <a href="index.html">Home</a>
       </li>
       <li>
-        <a href="about.html" style="color: #424242;">About</a>
+        <a href="about.html">About</a>
       </li>
       <li>
-        <a href="contact.html" style="color: #424242;">Contact</a>
+        <a href="contact.html">Contact</a>
       </li>
     </ul>
-    <section id="images">
-      <div class="gallery">
-        <a target="_blank" href="CATA.png">
-          <img src="CATA.png" width="600" height="400" class="btn">
-        </a>
-        <div class="desc">Add a description of the image here</div>
-      </div>
-      <div class="gallery">
-        <a target="_blank" href="IRB.jpg">
-          <img src="IRB.jpg" width="600" height="400">
-        </a>
-        <div class="desc">Add a description of the image here</div>
-      </div>
-      <div class="gallery">
-        <a target="_blank" href="2022.jpg">
-          <img src="2022.jpg" width="600" height="400">
-        </a>
-        <div class="desc">Add a description of the image here</div>
-      </div>
-      <div class="gallery">
-        <a target="_blank" href="2021.jpg">
-          <img src="2021.jpg" width="600" height="400">
-        </a>
-        <div class="desc">Add a description of the image here</div>
-      </div>
-    </section>
-  </body>
-</html>
+    <hr class="solid">
+    <h4 style="background-color: e0ffff; font-size: 400%; font-weight: bolder;">
+        REACH OUT
+    </h4>
+<div>
+  <form action="/action_page.php">
+    <label for="fname">First Name</label>
+    <input type="text" id="fname" name="firstname" placeholder="Your name..">
+    <label for="lname">Last Name</label>
+    <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+    <label for="country">Country</label>
+    <select id="country" name="country">
+      <option value="australia">Australia</option>
+      <option value="canada">Canada</option>
+      <option value="usa">USA</option>
+      <option value="australia">Australia</option>
+      <option value="australia">Australia</option>
+      <option value="australia">Australia</option>
+      <option value="australia">Australia</option>
+      <option value="australia">Australia</option>
+    </select>
+    <input type="submit" value="SUBMIT">
+  </form>
+</div>
+<footer>
+    <button id="time;" type="button;" style="font-weight: bold;"
+      onclick="document.getElementById('demo').innerHTML = Date()">
+        What time is it?
+    </button>
+    <p id="demo">
+      ⏱
+    </p>
+  </footer>
