--- a/contact.html
+++ b/contact.html
@@ -1,67 +1,102 @@
 <!DOCTYPE html>
-<html lang="en">
+<!-- Adds English and Hebrew display languages to assist searching & browsing. -->
+<html lang="en" lang="he">
+  
 
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <script src="index.js"></script>
-    <script src="tailwind.config.js"></script>
-    <script src="package-lock.json"></script>
-    <script src="package.json"></script>
-    <title>PsyTech UX - Contact</title>
-    <link rel="stylesheet" href="screen.css">
-    <link rel="stylesheet" href="index.js">
-<!-- GOOGLE FONTS - Adds various fonts from Google Fonts -->
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Caveat+Brush&family=Gochi+Hand&family=Macondo&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Reenie+Beanie&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins">
-    <!-- Install Tailwind -->
-<!-- Add play CDN script, enabling Tailwind utility classes to style content -->
-    <script src="https://cdn.tailwindcss.com"></script>
-<!-- Enable first-party plugins using the 'plugins' query parameter -->
-    <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp"></script>
-<!-- Include Flowbite via CDN by requiring minified stylesheet -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.css" rel="stylesheet">
-  </head>
-  <body style="background-color: e0ffff;">
-    <header>
-      <h1 style="background-color: e0ffff; font-size: 650%;">
-        PsyTech UX
-      </h1>
-    </header>
-    <ul style="font-weight: bold;">
-      <li>
-        <a href="index.html">Home</a>
-      </li>
-      <li>
-        <a href="about.html">About</a>
-      </li>
-      <li>
-        <a href="contact.html">Contact</a>
-      </li>
+<!-- ✩｡:*•.─────  ❁ ❁  ─────.•*:｡✩      H E A D      ✩｡:*•.─────  ❁ ❁  ─────.•*:｡✩ -->
+<head> 
+
+<!-- Specifies a character set to display the webpage page properly. -->
+  <meta charset="UTF-8">
+<!-- Enables responsive interfaces for viewing on different devices -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+<!-- Inputs various script sources & installs frameworks -->
+  <!-- Includes JS source script/stylesheet & CSS stylesheet. -->
+  <script src="index.js"></script>
+  <link rel="stylesheet" href="index.js">
+  <link rel="stylesheet" href="screen.css">
+  <!-- Includes JSON source script & installs Tailwind. -->
+  <script src="tailwind.config.js"></script>
+  <script src="package-lock.json"></script>
+  <script src="package.json"></script>
+    <!-- Adds CDN script, enabling Tailwind utility classes to style content. -->
+  <script src="https://cdn.tailwindcss.com"></script>
+    <!-- Enables first-party plugins using the 'plugins' query parameter. -->
+  <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp"></script>
+    <!-- Includes Flowbite via CDN by requiring minified stylesheet. -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.css" rel="stylesheet">
+<!-- Creates webpage tab display name for the about page. -->
+  <title>Contact - PsyTech</title>
+<!-- Adds fonts sourced from Google Fonts -->
+  <!-- POPPINS -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins">
+  
+</head>
+
+
+<!-- ✩｡:*•.─────  ❁ ❁  ─────.•*:｡✩      B O D Y      ✩｡:*•.─────  ❁ ❁  ─────.•*:｡✩ -->
+<body>
+
+<!-- HEADER
+Creates a header including a navigation bar alongside a primary title/H1 and an animated text scroll container. -->
+  <header>
+  <!-- NAVIGATION BAR
+  Creates a navigation bar that always stays at the top of each page, including "home," "about," and "contact" pages. -->
+    <ul>
+      <li><a href="index.html" style="color: #000000;">Home</a></li>
+      <li><a href="about.html" style="color: #000000;">About</a></li>
+      <li><a href="contact.html" style="color: #000000;">Contact</a></li>
     </ul>
+  <!-- H1
+  Creates a universal H1 website title display at the top of every page. -->
+    <h1 style="font-size: 650%; font-weight: bolder; top: 50px;"> PsyTech UX </h1>
+  <!-- TEXT SCROLL ANIMATION
+  Creates an animated text scroll container for the home page. -->
+    <div id="scroll-container">
+      <div id="scroll-text">
+        <h3> User Experience ↝ Research ↝ Usability ↝ Data & Analytics ↝ Psychology ↝ Cognitive & Behavioral Ergonomics </h3> 
+      </div>
+    </div>
+  <!-- PAGE DIVIDER
+  Adds a solid-line page divider to the home page. -->
     <hr class="solid">
-    <h4 style="background-color: e0ffff; font-size: 400%; font-weight: bolder;">
-        REACH OUT
-    </h4>
-<div>
-  <form action="/action_page.php">
-    <label for="fname">First Name</label>
-    <input type="text" id="fname" name="firstname" placeholder="Your name..">
-    <label for="lname">Last Name</label>
-    <input type="text" id="lname" name="lastname" placeholder="Your last name..">
-    <label for="country">Country</label>
-    <select id="country" name="country">
-      <option value="australia">Australia</option>
-      <option value="canada">Canada</option>
+  </header>
+
+  <!-- H4
+  Creates the parameters for H4 -->
+  <h4 style="background-color: e0ffff; font-size: 400%;"> Reach out - we want to hear you. </h4>
+  <!-- CONTACT FORM
+  Creates a contact form including text inputs for the first and last name, and drop-down selection menu for location. -->
+    <div style="font-family: 'Poppins', sans-serif;">
+      <form action="/action_page.php">
+      <label for="fname">First Name</label>
+      <input type="text" id="fname" name="firstname" placeholder="Preferred first name...">
+      <label for="lname">Last Name</label>
+      <input type="text" id="lname" name="lastname" placeholder="Preferred last name...">
+      <label for="country">Country</label>
+      <select id="country" name="country">
+      <option value="india">India</option>
+      <option value="china">China</option>
       <option value="usa">USA</option>
       <option value="australia">Australia</option>
-      <option value="australia">Australia</option>
-      <option value="australia">Australia</option>
-      <option value="australia">Australia</option>
-      <option value="australia">Australia</option>
+      <option value="mexico">Mexico</option>
+      <option value="russia">Russia</option>
+      <option value="brazil">Brazil</option>
+      <option value="japan">Japan</option>
+      <option value="japan">Japan</option>
+      <option value="japan">Japan</option>
+      <option value="japan">Japan</option>
+      <option value="japan">Japan</option>
+      <option value="japan">Japan</option>
+      <option value="japan">Japan</option>
+      <option value="japan">Japan</option>
+      <option value="japan">Japan</option>
+      <option value="japan">Japan</option>
+      <option value="japan">Japan</option>
+      <option value="japan">Japan</option>
+      <option value="japan">Japan</option>
+      <option value="japan">Japan</option>
     </select>
     <input type="submit" value="SUBMIT">
   </form>
@@ -75,3 +110,5 @@
       ⏱
     </p>
   </footer>
+
+  </body>
