--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <!-- Adds English and Hebrew display languages to assist searching & browsing. -->
-<html lang="en" lang="he">
-  
+<html lang="he"></html>
+<html lang="en">
+
 
 <!-- ✩｡:*•.─────  ❁ ❁  ─────.•*:｡✩      H E A D      ✩｡:*•.─────  ❁ ❁  ─────.•*:｡✩ -->
 <head> 
-
 <!-- Specifies a character set to display the webpage page properly. -->
   <meta charset="UTF-8">
 <!-- Enables responsive interfaces for viewing on different devices -->
@@ -13,31 +13,19 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <!-- Inputs various script sources & installs frameworks -->
   <!-- Includes JS source script/stylesheet & CSS stylesheet. -->
-  <script src="index.js"></script>
-  <link rel="stylesheet" href="index.js">
   <link rel="stylesheet" href="screen.css">
-  <!-- Includes JSON source script & installs Tailwind. -->
-  <script src="tailwind.config.js"></script>
-  <script src="package-lock.json"></script>
-  <script src="package.json"></script>
-    <!-- Adds CDN script, enabling Tailwind utility classes to style content. -->
-  <script src="https://cdn.tailwindcss.com"></script>
-    <!-- Enables first-party plugins using the 'plugins' query parameter. -->
-  <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp"></script>
-    <!-- Includes Flowbite via CDN by requiring minified stylesheet. -->
+  <!-- Includes Flowbite via CDN by requiring minified stylesheet. -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.css" rel="stylesheet">
 <!-- Creates webpage tab display name for the about page. -->
   <title>PsyTech UX by Xenia Lechler</title>
 <!-- Adds fonts sourced from Google Fonts -->
   <!-- POPPINS -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins">
-
 </head>
 
 
 <!-- ✩｡:*•.─────  ❁ ❁  ─────.•*:｡✩      B O D Y      ✩｡:*•.─────  ❁ ❁  ─────.•*:｡✩ -->
 <body>
-
 <!-- HEADER
 Creates a header including a navigation bar alongside a primary title/H1 and an animated text scroll container. -->
   <header>
@@ -62,7 +50,6 @@ Creates a header including a navigation bar alongside a primary title/H1 and an 
   Adds a solid-line page divider to the home page. -->
     <hr class="solid">
   </header>
-
 <!-- PROJECT IMG. & DESC. GALLERY
   Creates an image gallery for project previews on the home page, including images with descriptions. -->
   <section id="images">
@@ -94,7 +81,6 @@ Creates a header including a navigation bar alongside a primary title/H1 and an 
       <div class="desc"> Add a description of the image here. </div>
     </div>
   </section>
-
 </body>
 
 
