--- a/index.html
+++ b/index.html
@@ -48,8 +48,10 @@ Creates a header including a navigation bar alongside a primary title/H1 and an 
     </div>
   <!-- PAGE DIVIDER
   Adds a solid-line page divider to the home page. -->
-    <hr class="solid">
+    <hr class="solid" style="bottom: 25px;">
   </header>
+<!-- Creates the parameters for H4 -->
+  <h4 style="background-color: e0ffff; font-size: 400%; float: left; font-weight: bold;"> 2024 </h4>
 <!-- PROJECT IMG. & DESC. GALLERY
   Creates an image gallery for project previews on the home page, including images with descriptions. -->
   <section id="images">
@@ -60,7 +62,10 @@ Creates a header including a navigation bar alongside a primary title/H1 and an 
     highlight & transition animations when hovering over the element with the mouse. -->
       <img src="CATA.png" width="600" height="400" class="btn"></img>
     <!-- Includes an image description that briefly lays out the project. -->
-      <div class="desc"> Add a description of the image here. </div>
+      <div class="desc"> Our team conducted a usabiliy study on the CATA mobile website interface, identifying issues
+      in pass labeling, map functionality, and language usage. Recommendations for clearer pass labeling and enhanced
+      map functionality aim to improve user experience, effectiveness, and satisfaction. Associated with Michigan State
+      University - User Experience graduate program. </div>
     </div>
   <!-- PROJECT #2:  
   Creates a divider for P2 project content. 
@@ -68,19 +73,54 @@ Creates a header including a navigation bar alongside a primary title/H1 and an 
   Incorporates 'btn' class to trigger image background highlight animations when hovering with a mouse. 
   Includes project description for project. -->
     <div class="gallery">
-      <img src="IMG.png" width="600" height="400" class="btn"></img>
+      <img src="picture.png" width="400" height="200" class="btn"></img>
       <div class="desc"> Add a description of the image here. </div>
     </div>
+<!-- Creates the parameters for H4 -->
+<h4 style="background-color: e0ffff; font-size: 400%; float: left; font-weight: bold;"> 2023 </h4>
   <!-- PROJECT #3:
   Creates a divider for P3 project content. 
   Includes image for P3 project & defines sizing.
   Incorporates 'btn' class to trigger image background highlight animations when hovering with a mouse. 
   Includes project description for project. -->
     <div class="gallery">
-      <img src="IMG-2.png" width="600" height="400" class="btn"></img>
+      <img src="picture.png" width="400" height="200" class="btn"></img>
       <div class="desc"> Add a description of the image here. </div>
     </div>
+<!-- Creates the parameters for H4 -->
+<h4 style="background-color: e0ffff; font-size: 400%; float: left; font-weight: bold;"> Past projects </h4>
+  <!-- PROJECT #4:
+  Creates a divider for P4 project content. 
+  Includes image for P4 project & defines sizing.
+  Incorporates 'btn' class to trigger image background highlight animations when hovering with a mouse. 
+  Includes project description for project. -->
+    <div class="gallery">
+      <img src="picture.png" width="400" height="200" class="btn"></img>
+      <div class="desc"> Our IRB-approved research project investigated the correlation between intersectional 
+      identity factors and anxiety levels amid the COVID-19 pandemic. Through carefully designed surveys administered 
+      to participants, we explored how factors like race, gender, and socioeconomic status intersected with individuals' 
+      experiences of anxiety. By analyzing the data collected, we aimed to uncover insights into the complex relationship 
+      between identity and mental health outcomes during times of crisis, contributing valuable knowledge to the field of 
+      mental health research. </div>
+    </div>
   </section>
+<!-- PAGE DIVIDER
+Adds a solid-line page divider to the home page. -->
+<hr class="solid">
+<footer>
+  <address>
+    Reachable 24/7 <a href="mailto:sen@psytechux.xyz">via email</a><br>
+    Tel Aviv<br>
+    Israel
+  </address>
+  <button id="time;" type="button;" style="font-weight: bold;"
+    onclick="document.getElementById('demo').innerHTML = Date()">
+      What time is it?
+  </button>
+  <p id="demo">
+    ⏱
+  </p>
+</footer>
 </body>
 
 
