--- a/about.html
+++ b/about.html
@@ -57,12 +57,12 @@ Creates sections to house content in the aboout page. -->
   <section id="about">
     <!-- PROFILE CARD -->
     <div class="subject">
-      <img class="block mx-auto align-center" src="picture.png">
-      <h1 style="color:black; font-size:350%">Xenia Lechler</h1>
+      <img class="block mx-auto align-center" src="picture.png" width="400" height="200">
+      <h2 style="font-size: 450%; font-weight: bolder; color: #000000;">Xenia Lechler</h2>
       <p>As a growing UX specialist with a unique blend of expertise in psychology and computer science, I bring a multifaceted 
       perspective to the field of user experience. Currently completing my master's program in user experience, I am passionate 
-      about integrating principles from psychology and computer science to create intuitive and user-centric digital experiences.</p> 
-      <p>With a solid foundation in human behavior and cognition, coupled with technical proficiency in software development, I am 
+      about integrating principles from psychology and computer science to create intuitive and user-centric digital experiences. 
+      With a solid foundation in human behavior and cognition, coupled with technical proficiency in software development, I am 
       adept at bridging the gap between user needs and technological innovation. My goal is to leverage my diverse skill set to craft 
       engaging and impactful digital solutions that resonate with users on a meaningful level.</p>
     </div>
@@ -74,8 +74,8 @@ Creates sections to house content in the aboout page. -->
       protocols governing research involving human participants. With a background in statistical analysis, I've applied rigorous methodologies
       to ensure the integrity and validity of research outcomes. This expertise extends to designing studies, obtaining IRB approvals, recruiting 
       participants, conducting data collection, and analyzing results. My commitment to ethical research practices and attention to detail ensures 
-      the protection of participants' rights and the quality of research outcomes.</p>
-      <p>In my role as a UX researcher, I bring a wealth of experience in designing and conducting user-centered research studies to enhance digital 
+      the protection of participants' rights and the quality of research outcomes.
+      In my role as a UX researcher, I bring a wealth of experience in designing and conducting user-centered research studies to enhance digital 
       experiences. With a deep understanding of human behavior and interaction design principles, I navigate the intricacies of user research methodologies, 
       from crafting insightful research questions to executing usability tests and gathering actionable insights. My proficiency in qualitative and quantitative 
       analysis equips me to uncover patterns and trends, driving informed design decisions that prioritize user needs and preferences. Moreover, my dedication 
