--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 <!-- Adds fonts sourced from Google Fonts -->
   <!-- POPPINS -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
 </head>
 
 
@@ -95,13 +96,13 @@ Creates a header including a navigation bar alongside a primary title/H1 and an 
   Incorporates 'btn' class to trigger image background highlight animations when hovering with a mouse. 
   Includes project description for project. -->
     <div class="gallery">
-      <img src="picture.png" width="400" height="200" class="btn"></img>
+      <img src="IRB.png" width="800" height="600" class="btn"></img>
       <div class="desc"> Our IRB-approved research project investigated the correlation between intersectional 
       identity factors and anxiety levels amid the COVID-19 pandemic. Through carefully designed surveys administered 
       to participants, we explored how factors like race, gender, and socioeconomic status intersected with individuals' 
       experiences of anxiety. By analyzing the data collected, we aimed to uncover insights into the complex relationship 
       between identity and mental health outcomes during times of crisis, contributing valuable knowledge to the field of 
-      mental health research. </div>
+      mental health research. Associated with Seattle University - Psychology undergraduate program.</div>
     </div>
   </section>
 <!-- PAGE DIVIDER
