--- a/about.html
+++ b/about.html
@@ -58,7 +58,7 @@ Creates sections to house content in the aboout page. -->
     <!-- PROFILE CARD -->
     <div class="subject">
       <img class="block mx-auto align-center" src="picture.png" width="400" height="200">
-      <h2 style="font-size: 450%; font-weight: bolder; color: #000000;">Xenia Lechler</h2>
+      <h2 style="font-size: 450%; font-weight: bolder; color: #000000;">Hello, I'm Xenia Lechler</h2>
       <p>As a growing UX specialist with a unique blend of expertise in psychology and computer science, I bring a multifaceted 
       perspective to the field of user experience. Currently completing my master's program in user experience, I am passionate 
       about integrating principles from psychology and computer science to create intuitive and user-centric digital experiences. 
@@ -81,6 +81,7 @@ Creates sections to house content in the aboout page. -->
       analysis equips me to uncover patterns and trends, driving informed design decisions that prioritize user needs and preferences. Moreover, my dedication 
       to ethical research practices ensures the protection of user privacy and the ethical treatment of research participants throughout the study process.</p>
     </div> 
+    <img class="block mx-auto align-center" src="picture.png" width="400" height="200">
   </section>
 <!-- PAGE DIVIDER
 Adds a solid-line page divider to the home page. -->
