--- a/contact.html
+++ b/contact.html
@@ -65,7 +65,7 @@ Creates a header including a navigation bar alongside a primary title/H1 and an 
         <input type="text" id="lname" name="lastname" placeholder="Your last name here (Optional)">
       <label for="country">Country</label>
         <select id="country" name="country">
-          <option value="india">India</option>
+          <option value="israel">Israel</option>
         <option value="china">China</option>
         <option value="usa">USA</option>
         <option value="australia">Australia</option>
@@ -73,7 +73,7 @@ Creates a header including a navigation bar alongside a primary title/H1 and an 
         <option value="russia">Russia</option>
         <option value="brazil">Brazil</option>
         <option value="japan">Japan</option>
-        <option value="israel">Israel</option>
+        <option value="india">India</option>
         <option value="canada">Canada</option>
         <option value="southafrica">South Africa</option>
         <option value="argentina">Argentina</option>
@@ -131,6 +131,16 @@ Creates a header including a navigation bar alongside a primary title/H1 and an 
     </select>
     <input type="submit" value="SUBMIT">
   </form>
+</div>
+<div class="subject" style="justify-content: center;">
+  <!-- Creates the parameters for H4 -->
+  <h4 style="background-color: e0ffff; font-size: 150%; justify-content: center; font-weight: bold;"> Are you interested in  working
+  with me? Please reach out any time. </h4>
+  <p>sen@psytechux.xyz</p>
+  <p>+972 229 3694</p>
+  <p>Likely respond to all messages & inquiries within 24 hours. To send an email, write a message
+  in the form above, or click "Reachable 24/7 via email" at the bottom of any page.
+  </p>
 </div>
 <!-- PAGE DIVIDER
 Adds a solid-line page divider to the home page. -->
